# drip_api

./: .claude.exs  .dockerignore  .env  .env.billing.example  .env.example  .envrc  .formatter.exs  .gitignore  .mcp.json  .rules  .tool-versions  AGENTS.md  API_DOCUMENTATION.md  API_SUMMARY.md  CLAUDE.md  CONTAINER_API_DOCUMENTATION.md  CONTAINER_MIGRATIONS_GUIDE.md  Dockerfile  Dockerfile.dev  EMAIL_CONFIGURATION.md  FOLDER_AS_A_SERVICE_EVALUATION.md  FOLDER_AS_A_SERVICE_PRODUCTION_READY.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PROGRESS.md  MANUAL_MCP_SETUP.md  MARKDOWN_SYSTEM.md  MCP_CONNECTION_GUIDE.md  MISSION_COMPLETE_FINAL.md  MISSION_COMPLETE_SUMMARY.md  NEXT_AGENT_PROMPT.md  NEXT_CLAUDE_AGENT_PROMPT.md  PERFORMANCE_BOOST_AVAILABLE.md  PERFORMANCE_REBUILD_CHAIN.md  PERFORMANCE_RESTORATION_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_A_COMPLETE.md  PHASE_B_COMPLETE.md  PRICING.md  PRODUCTION_READINESS_COMPLETE.md  README.md  (+24 more)
API_VALIDATION/: VALIDATION_SUMMARY.md  api_test_scenarios.md  controller_validation.md  domain_logic_validation.md  endpoint_validation_report.md
assets/: build.js  bun.lockb  components.json  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  test-vfsshare.js  tsconfig.json  tsconfig.node.json  vite.config.mts
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs  uuid_v7.exs
docs/: AI_AGENT_SECURITY.md  AI_API_BUSINESS_MODEL.md  API_DEMO.md  API_IMPLEMENTATION.md  AUTHENTICATION_IMPLEMENTATION.md  AUTHENTICATION_READY.md  DEPLOYMENT.md  (+49 more)
native/markdown_ld_nif/: Cargo.toml
native/markdown_ld_nif/src/: lib.rs
(+1253 files in other folders)
