[package]
name = "markdown_ld_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "markdown_ld_nif"
crate-type = ["cdylib"]

[dependencies]
rustler = "0.31"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
regex = "1.10"
thiserror = "1.0"

[dependencies.rustler_codegen]
version = "0.31"
optional = true

[features]
default = []